--- a/app/src/main/res/layout/item_about_kotlin.xml
+++ b/app/src/main/res/layout/item_about_kotlin.xml
@@ -18,11 +18,11 @@
 
         <ImageView
             android:id="@+id/imgAboutKotlin"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:padding="5dp"
             android:contentDescription="@null"
-            android:src="@drawable/ic_why"
+            android:src="@drawable/ic_contribute"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
