Updating main activity layout and adding profile activity.

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,12 @@
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
     </style>
+
+    <style name="ActionBarTheme" parent="Theme.AppCompat.Light">
+        <!-- Primary brand color. -->
+        <item name="titleTextColor">@color/white</item>
+        <item name="colorPrimary">@color/purple_700</item>
+        <item name="android:statusBarColor">@color/purple_700</item>
+        <item name="android:homeAsUpIndicator">@drawable/ic_arrow_back</item>
+    </style>
 </resources>
