--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -144,9 +144,8 @@
                 android:clipToPadding="false"
                 android:scrollbars="none"
                 android:overScrollMode="never"
-                tools:listitem="@layout/item_category"
-                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                app:spanCount="2"
+                tools:listitem="@layout/item_introduce_kotlin"
+                tools:itemCount="1"
                 app:layout_constraintTop_toBottomOf="@id/tvKotlin"/>
 
             <TextView
