--- a/app/src/main/res/layout/item_learning_materials.xml
+++ b/app/src/main/res/layout/item_learning_materials.xml
@@ -31,6 +31,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
 
         <ImageView
+            android:id="@+id/imgArrowDropdown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@null"
