--- a/app/src/main/res/layout/item_learning_materials.xml
+++ b/app/src/main/res/layout/item_learning_materials.xml
@@ -14,10 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="8dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?attr/selectableItemBackground">
+        android:padding="8dp">
 
         <TextView
             android:id="@+id/tvIntroduceKotlinTitle"
@@ -46,7 +43,6 @@
             android:id="@+id/expandableIntroduceKotlinLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:orientation="vertical"
             android:visibility="visible"
             app:layout_constraintTop_toBottomOf="@id/tvIntroduceKotlinTitle"
@@ -57,6 +53,7 @@
                 android:id="@+id/tvDescTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="@string/tvDescription"
                 android:textColor="@color/purple_700"
                 android:textStyle="bold"
@@ -77,7 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@null"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:src="@drawable/ic_docs"
                 app:layout_constraintTop_toBottomOf="@id/tvDesc"
                 app:layout_constraintStart_toStartOf="@id/tvDesc"/>
