--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,6 +10,8 @@
     <style name="ActionBarTheme" parent="Theme.AppCompat.Light">
         <!-- Primary brand color. -->
         <item name="titleTextColor">@color/white</item>
+        <item name="android:editTextColor">@android:color/white</item>
+        <item name="android:textColorHint">@color/grey</item>
         <item name="colorPrimary">@color/purple_700</item>
         <item name="android:statusBarColor">@color/purple_700</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_arrow_back</item>
