--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:contentDescription="@null"
-                android:src="@drawable/ic_search"
+                android:src="@drawable/ic_search_grey"
                 android:layout_gravity="center"
                 android:layout_marginStart="10dp"
                 app:layout_constraintTop_toTopOf="parent"
