--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -40,17 +40,30 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tvCategoryName"
+            android:id="@+id/tvCategoryVideoTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:text="@string/app_name"
+            android:text="@string/tvTutorial"
             android:textSize="16sp"
             android:textColor="@color/black"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/llIconLogo"
             app:layout_constraintEnd_toEndOf="@+id/llIconLogo"
             app:layout_constraintTop_toBottomOf="@id/llIconLogo"
+            app:layout_constraintBottom_toTopOf="@+id/tvCategoryName"/>
+
+        <TextView
+            android:id="@+id/tvCategoryName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@+id/llIconLogo"
+            app:layout_constraintEnd_toEndOf="@+id/llIconLogo"
+            app:layout_constraintTop_toBottomOf="@id/tvCategoryVideoTitle"
             app:layout_constraintBottom_toTopOf="@+id/tvCategoryNumber"/>
 
         <TextView
