--- a/app/src/main/res/layout/item_learning_materials.xml
+++ b/app/src/main/res/layout/item_learning_materials.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="5dp"
@@ -10,17 +10,14 @@
     app:cardCornerRadius="5dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintIntroduce"
+        android:id="@+id/constraintLearningMaterials"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="8dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:foreground="?attr/selectableItemBackground">
+        android:padding="8dp">
 
         <TextView
-            android:id="@+id/tvIntroduceKotlinTitleNumber"
+            android:id="@+id/tvLearningMaterialsTitleNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tvOne"
@@ -31,7 +28,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
-            android:id="@+id/tvIntroduceKotlinTitleName"
+            android:id="@+id/tvLearningMaterialsTitleName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
@@ -39,9 +36,9 @@
             android:textColor="@color/purple_700"
             android:textStyle="bold"
             android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="@+id/tvIntroduceKotlinTitleNumber"
-            app:layout_constraintBottom_toBottomOf="@+id/tvIntroduceKotlinTitleNumber"
-            app:layout_constraintStart_toEndOf="@+id/tvIntroduceKotlinTitleNumber"/>
+            app:layout_constraintTop_toTopOf="@+id/tvLearningMaterialsTitleNumber"
+            app:layout_constraintBottom_toBottomOf="@+id/tvLearningMaterialsTitleNumber"
+            app:layout_constraintStart_toEndOf="@+id/tvLearningMaterialsTitleNumber"/>
 
         <ToggleButton
             android:id="@+id/toggleExpand"
@@ -58,25 +55,44 @@
             app:layout_constraintEnd_toEndOf="parent"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/expandableIntroduceKotlinLayout"
+            android:id="@+id/expandableLearningMaterialsLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:orientation="vertical"
             android:visibility="visible"
-            app:layout_constraintTop_toBottomOf="@id/tvIntroduceKotlinTitleName"
+            app:layout_constraintTop_toBottomOf="@id/tvLearningMaterialsTitleName"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
+
+            <WebView
+                android:id="@+id/videoLearningMaterials"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                tools:ignore="WebViewLayout" />
+
+<!--            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView-->
+<!--                android:id="@+id/videoLearningMaterials"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="300dp"-->
+<!--                app:layout_constraintTop_toTopOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                tools:ignore="WebViewLayout" />-->
 
             <TextView
                 android:id="@+id/tvDescTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:text="@string/tvDescription"
+                android:layout_marginTop="20dp"
                 android:textColor="@color/purple_700"
                 android:textStyle="bold"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@+id/videoLearningMaterials"
+                app:layout_constraintStart_toStartOf="@+id/videoLearningMaterials" />
 
             <TextView
                 android:id="@+id/tvDesc"
@@ -98,7 +114,7 @@
                 app:layout_constraintStart_toStartOf="@id/tvDesc"/>
 
             <TextView
-                android:id="@+id/tvVideoUrl"
+                android:id="@+id/tvVideoUrlLearningMaterials"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
@@ -106,6 +122,9 @@
                 android:textColor="@color/black"
                 android:maxLines="1"
                 android:ellipsize="end"
+                android:clickable="true"
+                android:focusable="true"
+                android:foreground="?attr/selectableItemBackground"
                 app:layout_constraintTop_toTopOf="@+id/imgVideo"
                 app:layout_constraintBottom_toBottomOf="@+id/imgVideo"
                 app:layout_constraintStart_toEndOf="@+id/imgVideo"/>
