Adding fragment for: kotlin basic, kotlin oop, kotlin generic, kotlin collection, kotlin coroutine, and kotlin collection.

--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    tools:context=".ui.activity.SplashscreenActivity">
+    tools:context=".ui.SplashscreenActivity">
 
     <ImageView
         android:id="@+id/imgLogo"
