--- a/app/src/main/res/drawable/background_grey.xml
+++ b/app/src/main/res/drawable/background_grey.xml
@@ -6,9 +6,9 @@
     <corners
         android:radius="5dp"/>
     <solid
-        android:color="@color/white"/>
+        android:color="@color/colorSemiGrey"/>
     <stroke
         android:width="1dp"
-        android:color="@color/white"/>
+        android:color="@color/colorSemiGrey"/>
 
 </shape>
