--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorGrey">#FFC1C1C1</color>
+    <color name="colorSemiGrey">#EEEEEE</color>
 </resources>
