--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
+    android:background="@drawable/bg_splashscreen"
     tools:context=".ui.SplashscreenActivity">
 
     <ImageView
@@ -13,6 +14,6 @@
         android:layout_height="100dp"
         android:gravity="center"
         android:contentDescription="@null"
-        android:src="@drawable/kotlinherologo"/>
+        android:src="@drawable/kotlin_logo_white"/>
 
 </LinearLayout>
