--- a/app/src/main/res/layout/fragment_kotlin_generic.xml
+++ b/app/src/main/res/layout/fragment_kotlin_generic.xml
@@ -7,53 +7,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.home.kotlingeneric.fragment.KotlinGenericFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/toolbarBasic"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardBack"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:contentDescription="@null"
-            android:layout_margin="12dp"
-            android:focusable="true"
-            android:clickable="true"
-            android:foreground="?attr/selectableItemBackground"
-            app:cardCornerRadius="60dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-
-            <ImageView
-                android:id="@+id/imgBack"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_marginVertical="10dp"
-                android:layout_marginStart="3dp"
-                android:layout_gravity="center"
-                android:contentDescription="@null"
-                android:src="@drawable/ic_arrow_back_ios"
-                app:layout_constraintTop_toTopOf="@id/cardBack"
-                app:layout_constraintBottom_toBottomOf="@id/cardBack"/>
-
-        </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/tvKotlinGeneric"
-            android:textColor="@color/purple_700"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintHorizontal_bias="0.45"
-            app:layout_constraintStart_toEndOf="@id/cardBack"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/cardBack"
-            app:layout_constraintBottom_toBottomOf="@id/cardBack"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        android:id="@+id/toolbarMain"
+        layout="@layout/toolbar_general"/>
 
     <LinearLayout
         android:id="@+id/llSearch"
@@ -62,7 +18,8 @@
         android:orientation="horizontal"
         android:padding="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbarBasic"
+        android:layout_marginHorizontal="2dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbarMain"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:baselineAligned="false">
